# Project-JPO

./: AirQualityIndex.cpp  AirQualityIndex.h  ApiHandler.cpp  ApiHandler.h  CMakeLists.txt  Measurement.cpp  Measurement.h  README.md  Sensor.cpp  Sensor.h  Station.cpp  Station.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
